--- a/app/src/main/res/layout/dialog_rewarded.xml
+++ b/app/src/main/res/layout/dialog_rewarded.xml
@@ -52,9 +52,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text=" x 2"
+            android:text=" x 5"
             android:textColor="@android:color/white"
-            android:textSize="24dp" />
+            android:textSize="24sp" />
 
     </LinearLayout>
 
