--- a/app/src/main/res/layout/item_level.xml
+++ b/app/src/main/res/layout/item_level.xml
@@ -63,4 +63,17 @@
         app:layout_constraintStart_toEndOf="@+id/level_image_cardview"
         tools:text="0/10" />
 
+    <ImageView
+        android:id="@+id/plus_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:minHeight="80dp"
+        android:layout_margin="10dp"
+        android:src="@drawable/add"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
